force-app/main/default/objects/Master_Data_Request__c/Master_Data_Request__c.object-meta.xml
<CustomObject>
    <description>Stores request information for master data governance team such as account address, name change, sales organization extension, creation of partner accounts, segmentation update, account upgrades etc.</description>
    <label>Master Data Request</label>
    <nameField>
        <displayFormat>MDG: {MM}{YY}{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Master Data Requests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>