force-app/main/default/objects/Master_Data_Request__c/fields/Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>Contact_Phone__c</fullName>
    <description>This field stores contact's phone.</description>
    <label>Contact Phone</label>
    <type>Phone</type>
</CustomField>