force-app/main/default/objects/Master_Data_Request__c/fields/Contract_Complete__c.field-meta.xml
<CustomField>
    <fullName>Contract_Complete__c</fullName>
    <description>DCP-37166</description>
    <label>Contract Complete</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>