force-app/main/default/objects/Master_Data_Request__c/fields/Distributor_Agreement_Id__c.field-meta.xml
<CustomField>
    <fullName>Distributor_Agreement_Id__c</fullName>
    <description>This field stores Distributor Agreement Id.</description>
    <label>Distributor Agreement Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>