force-app/main/default/objects/Master_Data_Request__c/fields/Distributor_Distribution_Channel__c.field-meta.xml
<CustomField>
    <fullName>Distributor_Distribution_Channel__c</fullName>
    <description>This field stores Distributor Distribution Channel.</description>
    <label>Distributor Distribution Channel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>