force-app/main/default/objects/Master_Data_Request__c/fields/Distributor_ERP_ID__c.field-meta.xml
<CustomField>
    <fullName>Distributor_ERP_ID__c</fullName>
    <description>This field stores Distributor Account ERP Id.</description>
    <formula>Distributor__r.ERP_Customer_Id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Distributor ERP ID</label>
    <type>Text</type>
</CustomField>