force-app/main/default/objects/Master_Data_Request__c/fields/GCP_Quality_IVD_Status_Approved__c.field-meta.xml
<CustomField>
    <fullName>GCP_Quality_IVD_Status_Approved__c</fullName>
    <description>DCP-37166</description>
    <label>GCP Quality IVD Status Approved</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>