force-app/main/default/objects/Master_Data_Request__c/fields/Is_Transborder_Deal__c.field-meta.xml
<CustomField>
    <fullName>Is_Transborder_Deal__c</fullName>
    <description>This checkbox is used to identify if trans border deal required or not.</description>
    <defaultValue>false</defaultValue>
    <label>Is Transborder Deal</label>
    <type>Checkbox</type>
</CustomField>