force-app/main/default/objects/Master_Data_Request__c/fields/New_Address__c.field-meta.xml
<CustomField>
    <fullName>New_Address__c</fullName>
    <description>This field stores new addresses.</description>
    <label>New Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>