force-app/main/default/objects/Master_Data_Request__c/fields/New_Distribution_Channel__c.field-meta.xml
<CustomField>
    <fullName>New_Distribution_Channel__c</fullName>
    <description>This picklist field stores new distribution channel.</description>
    <label>New Distribution Channel</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>01 (Direct)</fullName>
            </value>
            <value>
                <fullName>02 (Indirect)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>