force-app/main/default/objects/Master_Data_Request__c/fields/New_Market_Segment_Allocation__c.field-meta.xml
<CustomField>
    <fullName>New_Market_Segment_Allocation__c</fullName>
    <description>This field stores percentage of new market allocation.</description>
    <label>New Market Segment Allocation %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>