force-app/main/default/objects/Master_Data_Request__c/fields/New_Street_Address__c.field-meta.xml
<CustomField>
    <fullName>New_Street_Address__c</fullName>
    <description>This text field stores new street address.</description>
    <label>New Street Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>