force-app/main/default/objects/Master_Data_Request__c/fields/Other_Change_Request_Type__c.field-meta.xml
<CustomField>
    <fullName>Other_Change_Request_Type__c</fullName>
    <description>This multi-select picklist is used to indicate other change request type.</description>
    <label>Other Change Request Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Account Inactivation</fullName>
            </value>
            <value>
                <fullName>Account Merge</fullName>
            </value>
            <value>
                <fullName>Contact Change</fullName>
            </value>
            <value>
                <fullName>Contact Merge</fullName>
            </value>
            <value>
                <fullName>Currency Change</fullName>
            </value>
            <value>
                <fullName>Hierarchy Change</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>