force-app/main/default/objects/Master_Data_Request__c/fields/Partner_Function_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Partner_Function_Account_Name__c</fullName>
    <description>This field lookup to customer master data which will be used for specified partner function.</description>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Enter the name of the account that will used for the specified partner function</inlineHelpText>
    <label>Partner Function Account Name</label>
    <referenceTo>Customer_Master_Data__c</referenceTo>
    <relationshipLabel>Master Data Requests (Partner Function Account Name)</relationshipLabel>
    <relationshipName>Master_Data_Requests1</relationshipName>
    <type>Lookup</type>
</CustomField>