force-app/main/default/objects/Master_Data_Request__c/fields/Primary_Sold_To_Account__c.field-meta.xml
<CustomField>
    <fullName>Primary_Sold_To_Account__c</fullName>
    <description>This lookup field relate to primary sold to account.</description>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Sold To Account</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.Account_Group__c</field>
            <operation>equals</operation>
            <value>Sold To</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Master Data Requests (Primary Customer Account)</relationshipLabel>
    <relationshipName>MDR_Primary_Customer_Account</relationshipName>
    <type>Lookup</type>
</CustomField>