force-app/main/default/objects/Master_Data_Request__c/fields/Ship_To__c.field-meta.xml
<CustomField>
    <fullName>Ship_To__c</fullName>
    <description>This lookup field is used to reference Ship To Account.</description>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ship To</label>
    <referenceTo>Customer_Master_Data__c</referenceTo>
    <relationshipLabel>Master Data Requests</relationshipLabel>
    <relationshipName>Master_Data_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>