force-app/main/default/objects/Master_Data_Request__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>This field is used to identify the type of request.</description>
    <formula>IF(
    OR( 
        RecordType.DeveloperName ==  $Label.MasterDataRequestUpgradeToDistributor ,
        RecordType.DeveloperName ==  $Label.MasterDataRequestUpgradeToSoldTo,
        RecordType.DeveloperName ==  $Label.MasterDataRequestUpgradeToUltimateConsignee,
        RecordType.DeveloperName ==  $Label.MasterDataRequestUpgradeToChannelPartner
    ),
    &apos;Upgrade Request&apos;,
    &apos;Change Request&apos;
)</formula>
    <label>Type</label>
    <type>Text</type>
</CustomField>