force-app/main/default/objects/Master_Data_Request__c/fields/Ultimate_Consignee__c.field-meta.xml
<CustomField>
    <fullName>Ultimate_Consignee__c</fullName>
    <description>This lookup field represents ultimate consignee account.</description>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ultimate Consignee</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Master Data Requests (Ultimate Consignee)</relationshipLabel>
    <relationshipName>Master_Data_Requests1</relationshipName>
    <type>Lookup</type>
</CustomField>