force-app/main/default/objects/Master_Data_Request__c/fields/Ultimate_Consignee_ERP_ID__c.field-meta.xml
<CustomField>
    <fullName>Ultimate_Consignee_ERP_ID__c</fullName>
    <description>This formula field is used to store ultimate consignee ERP id.</description>
    <formula>Ultimate_Consignee__r.ERP_Customer_Id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ultimate Consignee ERP ID</label>
    <type>Text</type>
</CustomField>