force-app/main/default/objects/Master_Data_Request__c/fields/Ultimate_Consignee_Sales_Org__c.field-meta.xml
<CustomField>
    <fullName>Ultimate_Consignee_Sales_Org__c</fullName>
    <description>This formula field is used to store ultimate consignee sales org.</description>
    <label>Ultimate Consignee Sales Org</label>
    <length>255</length>
    <type>Text</type>
</CustomField>