force-app/main/default/objects/Master_Data_Request__c/recordTypes/Change_Address_or_Name_Request.recordType-meta.xml
<RecordType>
    <fullName>Change_Address_or_Name_Request</fullName>
    <active>true</active>
    <description>Select this record type to change address</description>
    <label>Change Address or Name Request</label>
</RecordType>