force-app/main/default/objects/Master_Data_Request__c/recordTypes/Extend_to_Sales_Org.recordType-meta.xml
<RecordType>
    <fullName>Extend_to_Sales_Org</fullName>
    <active>false</active>
    <description>Select this record type to request extension of Sales Org</description>
    <label>Extend to Sales Org</label>
</RecordType>