force-app/main/default/objects/Master_Data_Request__c/recordTypes/New_Related_Partner_Account.recordType-meta.xml
<RecordType>
    <fullName>New_Related_Partner_Account</fullName>
    <active>true</active>
    <description>Select this record type to request a new Ship To, Bill To, Payer, etc. partner function relationship</description>
    <label>New Related Partner Account</label>
</RecordType>