force-app/main/default/objects/Master_Data_Request__c/recordTypes/Other_Change_Request.recordType-meta.xml
<RecordType>
    <fullName>Other_Change_Request</fullName>
    <active>true</active>
    <description>Select this record type to submit a general request to Data Stewards. Examples of requests: hierarchy changes, multiple requests, deletion request, etc.</description>
    <label>Other Change Request</label>
</RecordType>