force-app/main/default/objects/Master_Data_Request__c/recordTypes/Segmentation_Change_Request.recordType-meta.xml
<RecordType>
    <fullName>Segmentation_Change_Request</fullName>
    <active>false</active>
    <description>Select this record type to change segmentation information (Market Segment, Clinical Type, etc.)</description>
    <label>Segmentation Change Request</label>
</RecordType>