force-app/main/default/objects/Master_Data_Request__c/recordTypes/Upgrade_to_Channel_Partner.recordType-meta.xml
<RecordType>
    <fullName>Upgrade_to_Channel_Partner</fullName>
    <active>true</active>
    <description>Select this record type to upgrade Prospect to a Channnel Partner and send request to Data Stewards</description>
    <label>Upgrade to Channel Partner</label>
</RecordType>