force-app/main/default/objects/Master_Data_Request__c/recordTypes/Upgrade_to_Distributor.recordType-meta.xml
<RecordType>
    <fullName>Upgrade_to_Distributor</fullName>
    <active>false</active>
    <description>Select this record type to upgrade Prospect to a Distributor and send request to Data Stewards</description>
    <label>Upgrade to Distributor</label>
</RecordType>