force-app/main/default/objects/Master_Data_Request__c/recordTypes/Upgrade_to_Sold_To.recordType-meta.xml
<RecordType>
    <fullName>Upgrade_to_Sold_To</fullName>
    <active>true</active>
    <description>Select this record type to upgrade Prospect to a Sold To and send request to Data Stewards</description>
    <label>Upgrade to Sold To</label>
</RecordType>