force-app/main/default/objects/Master_Data_Request__c/recordTypes/Upgrade_to_Ultimate_Consignee.recordType-meta.xml
<RecordType>
    <fullName>Upgrade_to_Ultimate_Consignee</fullName>
    <active>true</active>
    <description>Select this record type to upgrade Prospect to a Ultimate Consignee and send request to Data Stewards</description>
    <label>Upgrade to Ultimate Consignee</label>
</RecordType>