force-app/main/default/objects/Master_Data_Request__c/validationRules/CheckProspectAccountStatus.validationRule-meta.xml
<ValidationRule>
    <fullName>CheckProspectAccountStatus</fullName>
    <active>true</active>
    <description>For prospect accounts verify that the account status is active prospect</description>
    <errorConditionFormula>AND(
    Account_Name__r.RecordType.DeveloperName == $Label.AccountProspect,
    OR(
       NOT(ISPICKVAL(Account_Name__r.Account_Status__c, &apos;Active Prospect&apos; )),
       ISBLANK( Account_Name__r.ERP_Customer_Id__c ) 
    ),
    TEXT (  Account_Name__r.Account_Status__c ) != $Label.AccountStatusPendingUpgrade
)</errorConditionFormula>
    <errorMessage>Before upgrading, first submit prospect by clicking &quot;Validate Address&quot; tab.</errorMessage>
</ValidationRule>