force-app/main/default/objects/Master_Data_Request__c/validationRules/CheckProspectAccountValidRecordTypes.validationRule-meta.xml
<ValidationRule>
    <fullName>CheckProspectAccountValidRecordTypes</fullName>
    <active>false</active>
    <description>Check valid record type selection for a Prospect Account</description>
    <errorConditionFormula>AND(
     Account_Name__r.RecordType.DeveloperName == $Label.AccountProspect,
     NOT(
         OR(
            RecordType.DeveloperName == $Label.MasterDataRequestUpgradeToDistributor,
            RecordType.DeveloperName == $Label.MasterDataRequestUpgradeToSoldTo,
            RecordType.DeveloperName == $Label.MasterDataRequestUpgradeToUltimateConsignee
         )
     ),
				TEXT ( Account_Name__r.Account_Status__c ) != $Label.AccountStatusPendingUpgrade
)</errorConditionFormula>
    <errorMessage>For a prospect Account please select only an &quot;Upgrade&quot; request</errorMessage>
</ValidationRule>