force-app/main/default/objects/Master_Data_Request__c/validationRules/CheckProspectSubmittedForUpgrade.validationRule-meta.xml
<ValidationRule>
    <fullName>CheckProspectSubmittedForUpgrade</fullName>
    <active>true</active>
    <description>Prevents creation of new MDG Request when prospect account has been submitted for upgrade and account status is Pending Upgrade.</description>
    <errorConditionFormula>AND (
				TEXT ( Account_Name__r.Account_Status__c ) = $Label.AccountStatusPendingUpgrade,
				Account_Name__r.RecordType.Name = $Label.AccountProspect,
				ISNEW()
)</errorConditionFormula>
    <errorMessage>Cannot submit new requests as account is under review with Data Stewards and pending upgrade.</errorMessage>
</ValidationRule>