force-app/main/default/objects/Master_Data_Request__c/validationRules/LockManualEdit.validationRule-meta.xml
<ValidationRule>
    <fullName>LockManualEdit</fullName>
    <active>true</active>
    <description>This Validation rule prevents user edit through UI</description>
    <errorConditionFormula>AND(
    NOT(ISNEW()),
    NOT( OR(
             ISCHANGED( Is_Updated_By_System__c),
             Is_Updated_By_System__c
         )
    )
)</errorConditionFormula>
    <errorMessage>You cannot update an MDG Request</errorMessage>
</ValidationRule>